update page title

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-cayman
-title: "Terraform on DigitalOcean"
+title: Terraform on DigitalOcean
+description: Just trying automate droplets
