update page url

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-cayman
 title: Terraform on DigitalOcean
 description: Just trying automate droplets
+permalink: /terraform-digitalocean/
